# summer-hackathon

./: .gitignore  README.md
Python-Backend/sentiment-analysis/: pyproject.toml
Python-Backend/sentiment-analysis/sentiment_analysis/: config.py  dependencies.py  main.py
Python-Backend/sentiment-analysis/sentiment_analysis/db/: queries.py
backend/: Dockerfile  Dockerfile.ga  fff_checkstyle.xml  nexus_settings.xml  pom.xml
backend/src/main/java/com/fabfitfun/hackathon/api/: ExceptionResponseHandler.java
backend/src/main/java/com/fabfitfun/hackathon/data/: Question.java  QuestionDataDto.java  QuestionDto.java  QuestionListDto.java  SentimentList.java  UsersToTest.java
backend/src/main/resources/: app-local.properties  app.yml  log4j2.yml
backend/src/main/resources/avro/: customer-segmentation-event.avsc
frontend/: .env  .env.dev  .env.prod  .env.qa  .eslintrc  .gitignore  package.json
frontend/public/: csv-import-export-sample.csv
frontend/src/: AdminRoutes.js  App.js  SentimentAnalysis.js  SentimentAnalysis.module.css  index.css  index.js  polyfills.js  shared.module.css
frontend/src/shared-components/: index.js
frontend/src/shared-components/PageContainer/: PageContainer.js  PageContainer.module.css
sentiment-analysis/: .envrc  Dockerfile  Makefile  docker-compose.yaml  pyproject.toml
sentiment-analysis/makefiles/: docker.mk  python.mk
sentiment-analysis/sentiment_analysis/: config.py  dependencies.py  main.py
sentiment-analysis/sentiment_analysis/db/: product_orm.py  queries.py  questionaire_orm.py  user_orm.py
(+30 files in other folders)
